fix(client): dropdown has scrollbar when collapsing fix(client): labels in new task are not styled

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -172,6 +172,10 @@ a {
     @include m.Label-Medium;
 }
 
+.Label-Small {
+    @include m.Label-Small;
+}
+
 .Body-Small {
     @include m.Body-Small;
 }
